...
          tabBarIcon: ({ color }) => <Icon icon={Home} color={color} size={26} />,
        }}
      />
      <Tabs.Screen
        name="music"
        options={{
          title: "Music",
          tabBarIcon: ({ color }) => <Icon icon={Music} color={color} size={26} />,
        }}
      />
      <Tabs.Screen
        name="movies"
        options={{
...
